--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <body>
 
         <!-- TYPE CODE BELOW -->
-         <div>
-            <h1>Welcome, <span>_______</span></h1>
+         <div id="header">
+            <h1>Welcome, <span id="username">_______</span></h1>
              <span>
-                 <input type="text">
-                 <button>Save</button>
+                 <input id="greeter" type="text">
+                 <button id="save-name">Save</button>
             </span>
          </div>
-         <div>
+         <div id="intro">
             <h1>WELCOME to Elina's blog of the Summer!</h1>
             <h3>Learn about everything that's happening!! :)</h3>
 
@@ -27,17 +27,18 @@
             <img src="https://live.staticflickr.com/5504/10416469244_77348fe993_b.jpg" width="25%">
             <img src="https://ak-d.tripcdn.com/images/1i67112000dmppgxjA384.png?proc=source/trip" width="20%">
             
-            <p>My plans and my bucket list!</p>
-            <ol>
+            <p><u>My plans and my bucket list!</u></p>
+            <ol class="ListStyle">
                 <li>Summer school</li>
                 <li>Road Trip</li>
                 <li>Hangout with friends!</li>
                 <li>Go to the beach</li> 
-                AND MORE, YET TO BE DETERMINED!
+                <li>and more...</li>
+                 TO BE DETERMINED!
             </ol>
 
             <p>One of the places my family and I have discussed as an option for our destination is Ottawa!! It sounds like fun and I'm looking forward to wherever we go!</p>
-            <a href="https://www.youtube.com/watch?v=9wuVDNoMs8k&t=10s">Click here for a look of Ottawa!</a>
+            <a class="ListStyle" href="https://www.youtube.com/watch?v=9wuVDNoMs8k&t=10s">Click here for a look of Ottawa!</a>
 
         </div>
         
