Added about page

--- a/about.html
+++ b/about.html
@@ -10,10 +10,37 @@
     </head>
 
     <body>
-
+        <nav class="navbar">
+            <ul class="nav-links">
+                <b><li><a href="index.html">Home</a></li></b>
+                <b><li><a href="blog.html">Blog</a></li></b>
+                <b><li class="current"><a href="about.html">About Me</a></li></b>
+            </ul>
+        </nav>
         <!-- TYPE CODE BELOW -->
-
-
+        <h1 class="title">About Me!</h1>
+        <h2 class="title"> This is where you can learn more about me, Elina! Click through the following to start!</h2>
+        <div class="accordion">
+            <div class="accordion-item">
+                <button class="accordion-header">Fav Foods</button>
+                <div class="accordion-content">
+                    <p>One of my favourite foods is sushi because I love sashimi.</p>
+                </div>
+            </div>
+             <div class="accordion-item">
+                <button class="accordion-header">Fav Hobbies</button>
+                <div class="accordion-content">
+                    <p>One of my favourite hobbies is writing because I love how I can express my emotions with creative thinking.</p>
+                </div>
+            </div>
+             <div class="accordion-item">
+                <button class="accordion-header">Fav Animals</button>
+                <div class="accordion-content">
+                    <p>One of my favourite animals are dogs because they are very loyal, super cute, and fuzzy.</p>
+                </div>
+            </div>
+        </div>
+       
         <script src="script.js"></script>
     </body>
 
