--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Tab Title</title>
+        <title>About Elina!</title>
         <link rel="stylesheet" href="style.css">
     </head>
 
@@ -24,19 +24,25 @@
             <div class="accordion-item">
                 <button class="accordion-header">Fav Foods</button>
                 <div class="accordion-content">
-                    <p>One of my favourite foods is sushi because I love sashimi.</p>
+                    <p>One of my favourite foods is sushi because I love sashimi. I love the fresh taste of each bite and the many varieties sushi has!
+                     However, it isn't my only favourite food! I also enjoy eating salads and soups, followed by dishes made from potato! Funny story, from ages 5-12, I used to only eat chicken strips and fries when my family (along with me) went out for food! I am glad I have expanded my tastebuds since then!
+                    </p>
                 </div>
             </div>
              <div class="accordion-item">
                 <button class="accordion-header">Fav Hobbies</button>
                 <div class="accordion-content">
-                    <p>One of my favourite hobbies is writing because I love how I can express my emotions with creative thinking.</p>
+                    <p>One of my favourite hobbies is writing because I love how I can express my emotions with creative thinking. Over the years, I've written a few short books and each time, it brings me very much joy to read them!
+                        Some of the other things I like to do include: Playing badminton, singing, going outside, and more!
+                    </p>
                 </div>
             </div>
              <div class="accordion-item">
                 <button class="accordion-header">Fav Animals</button>
                 <div class="accordion-content">
-                    <p>One of my favourite animals are dogs because they are very loyal, super cute, and fuzzy.</p>
+                    <p>One of my favourite animals are dogs because they are very loyal, super cute, and fuzzy. Ever since I was 7, my favourite animal has been dogs and I have fantasized about having one! In the future, I hope I can make this dream of mine come true!
+                        Other than dogs, I also like bunnies! To me, they are just irresistable! Small, soft and cuddly!
+                    </p>
                 </div>
             </div>
         </div>
