--- a/blog.html
+++ b/blog.html
@@ -49,18 +49,18 @@
     </div>
 
     <div class="blog-entry">
-        <img src="https://i.ytimg.com/vi/4dYqVYdM4ZA/maxresdefault.jpg" width="55%">
+        <img src="" width="55%">
         <div>
-            <h4>June 13th - Had my audition for Senior Chamber</h4>
+            <h4>June 20th - Hotpot with friends</h4>
            
-            <p> Firstly, I prepared over a few months and practiced everything needed.
+            <p> Firstly, we got a spot on the waitlist and went over to the location.
 
             </p>
-            <p> Secondly, I began choosing my songs and tried them out! 
+            <p> Secondly, we went in and grabbed our bowls and chose our ingredients!
 
             </p>
 
-            <p> After some more prep, I came to this day and was nervous but ready to audition! </p>
+            <p> And then after we paid and waited, we got our food and ate it while talking! It was very good! </p>
         </div>
     </div>
 
@@ -68,24 +68,24 @@
         <p>Enter the password for secret entries!;)</p>
         <span id="password-field">
             <input type="password" id="password"> 
-            <button>Go</button>
+            <button onclick ="validatePass()">Go</button>
         </span>
         <p id="message"></p>
     </div>
 
     <div class="blog-entry hidden">
-        <img src="https://i.ytimg.com/vi/4dYqVYdM4ZA/maxresdefault.jpg" width="55%">
+        <img src="choir.jpg" width="55%">
         <div>
-            <h4>June 13th - Had my audition for Senior Chamber</h4>
+           <h4>June 20th - Last choir concert of the year!</h4>
            
-            <p> Firstly, I prepared over a few months and practiced everything needed.
+            <p> Firstly, our choir rehearsed and practiced our pieces for the show over 2 months.
 
             </p>
-            <p> Secondly, I began choosing my songs and tried them out! 
+            <p> Secondly, we choreographed some moves into the songs!
 
             </p>
 
-            <p> After some more prep, I came to this day and was nervous but ready to audition! </p>
+            <p> And then, on the 20th, we had the concert! It was incredibly fun and also the longest concert because the grads had performances and awards handed out! </p>
         </div>
     </div>
 
