--- a/blog.html
+++ b/blog.html
@@ -106,7 +106,7 @@
     </div>
 
     <div class="blog-entry hidden">
-        <img src="https://i.ytimg.com/vi/4dYqVYdM4ZA/maxresdefault.jpg" width="55%">
+        <img src="https://logodix.com/logo/1949809.jpg" width="55%">
         <div>
             <h4>June 21st - Last day of Webcamp!</h4>
            
