--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
              <div class="accordion-item">
                 <button class="accordion-header">Fav Hobbies</button>
                 <div class="accordion-content">
-                    <p>One of my favourite hobbies is writing because I love how I can express my emotions with creative thinking. Over the years, I've written a few short books and each time, it brings me very much joy to read them!
+                    <p>One of my favourite hobbies is writing because I love how I can express my emotions with creative thinking. Over the years, I've written a few short books and each time, it brings me very much joy to write them! Including Emily Ling, Alley Dog, trouble makers or heroes, and more!
                         Some of the other things I like to do include: Playing badminton, singing, going outside, and more!
                     </p>
                 </div>
