--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
         <p>Over this school year, one of my favourite moments was going to Whistler for the Con Brio Festival! There, me
             and My school's choir stayed for four days, participating in the competition and enjoying the surroundings.
         </p>
+
+        <p> Another exciting moment was getting published into a book from a Poetry Contest all across Canada. I sent in my submission last year and got my results in March. Although I didn't win a prize, getting published is already very exciting!
+
+        </p>
         <img src="https://ak-d.tripcdn.com/images/1i67112000dmppgxjA384.png?proc=source/trip" width="20%">
 
         <p><u><b>My plans and my bucket list!</b></u></p>
@@ -59,11 +63,10 @@
             to take the classes I chose. In case your wondering what they are, I'm taking French 10 and Math 10. These
             are for completion so I'm slightly for nervous. That would mean next year, I'm taking Math 11 and French 11!
         </p>
-        <p>Anywayy, let's talk more about the fun things. One of the ideas I had is definitely at a top spot in my
-            bucket list to do in the summer. And that is to go to the beach! The idea is unfortunately not swimming.
+        <p>But since that isn't very exciting, let's talk more about the fun things. One of the ideas I had is definitely at a top spot in my
+            bucket list to do in the summer. And that is to go to the beach! The idea is not swimming if that's what your thinking.
             Basically, I saw someone bring a pool floatie that was shaped like a bowl and they sat in it on the beach
-            with a blanket, a book, and a drink, watching the sunset! That just sounds so enjoyable to me so I want to
-            try it out. </p>
+            with a blanket, a book, and a drink, watching the sunset! I've wanted to try it out for a while now so hopefully I can during the summer!
         <p></p>
     </div>
 
